# AI-Email-Assistant-Natural-Language-to-Email-Automation

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/api/v1/endpoints/: email.py  genai.py  users.py
app/api/v1/schemas/: genai.py  users.py
app/core/: config.py
app/models/: email.py  email_response.py  user_message.py
app/services/: gmail_sender.py  llm.py
app/utils/: helper.py
tests/: test_genai_endpoints.py
